加入視差滾動

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@ current: index
       </li>
 
       <li class="col-lg-3">
-        <div class="adv-card py-12 px-6 border-transparent radius-12">
+        <div data-aos="fade-up-right" data-aos-duration="1000" class="adv-card py-12 px-6 border-transparent radius-12">
           <span class="material-icons icon-size fz-1 text-gradient">code</span>
           <section class="mt-6 d-flex flex-column flex-grow-1 h-120-px">
             <h4 class="mb-0 fz-7 lh-base fw-bold">超過 100 種專業課程</h4>
@@ -46,7 +46,7 @@ current: index
         </div>
       </li>
       <li class="col-lg-3">
-        <div class="adv-card py-12 px-6 border-transparent radius-12">
+        <div data-aos="fade-up" data-aos-duration="1000" class="adv-card py-12 px-6 border-transparent radius-12">
           <span class="material-icons icon-size fz-1 text-gradient">rocket_launch</span>
           <section class="mt-6 d-flex flex-column flex-grow-1 h-120-px">
             <h4 class="mb-0 fz-7 lh-base fw-bold">高效學習</h4>
@@ -56,7 +56,7 @@ current: index
         </div>
       </li>
       <li class="col-lg-3">
-        <div class="adv-card py-12 px-6 border-transparent radius-12">
+        <div data-aos="fade-up-left" data-aos-duration="1000" class="adv-card py-12 px-6 border-transparent radius-12">
           <span class="material-icons icon-size fz-1 text-gradient">place</span>
           <section class="mt-6 d-flex flex-column flex-grow-1 h-120-px">
             <h4 class="mb-0 fz-7 lh-base fw-bold">指定地點</h4>
@@ -74,28 +74,28 @@ current: index
 
     <ul class="row">
       <li class="col-md-6 col-lg-3 text-start mb-12 mb-lg-0 d-flex">
-        <a href="#" class="position-relative p-12 border border-light radius-12 d-flex flex-column w-100">
+        <a href="#" data-aos="zoom-in-up" data-aos-duration="1500" class="position-relative p-12 border border-light radius-12 d-flex flex-column w-100">
           <div class="num-absolute fz-1 px-2 lh-56 font-azeret fw-bold bg-asphalt">01</div>
           <h3 class="fz-4 lh-base mb-4 fw-bold text-light">預約</h3>
           <p class="fz-7 lh-base text-light flex-grow-1">線上預約指定課程與老師<br>由老師安排專屬課程</p>
         </a>
       </li>
       <li class="col-md-6 col-lg-3 text-start mb-12 mb-lg-0 d-flex">
-        <a href="#" class="position-relative p-12 border border-light radius-12 d-flex flex-column w-100">
+        <a href="#" data-aos="zoom-in-up" data-aos-duration="1500" class="position-relative p-12 border border-light radius-12 d-flex flex-column w-100">
           <div class="num-absolute fz-1 px-2 lh-56 font-azeret fw-bold bg-asphalt">02</div>
           <h3 class="fz-4 lh-base mb-4 fw-bold text-light">付款</h3>
           <p class="fz-7 lh-base text-light flex-grow-1">支援各種支付方式<br>提供12期分期付款</p>
         </a>
       </li>
       <li class="col-md-6 col-lg-3 text-start mb-12 mb-md-0 d-flex">
-        <a href="#" class="position-relative p-12 border border-light radius-12 d-flex flex-column w-100">
+        <a href="#" data-aos="zoom-in-up" data-aos-duration="1500" class="position-relative p-12 border border-light radius-12 d-flex flex-column w-100">
           <div class="num-absolute fz-1 px-2 lh-56 font-azeret fw-bold bg-asphalt">03</div>
           <h3 class="fz-4 lh-base mb-4 fw-bold text-light">上課</h3>
           <p class="fz-7 lh-base text-light flex-grow-1">地點由您指定<br>密集性一對一教學</p>
         </a>
       </li>
       <li class="col-md-6 col-lg-3 text-start d-flex">
-        <a href="#" class="position-relative p-12 border border-light radius-12 d-flex flex-column w-100">
+        <a href="#" data-aos="zoom-in-up" data-aos-duration="1500" class="position-relative p-12 border border-light radius-12 d-flex flex-column w-100">
           <div class="num-absolute fz-1 px-2 lh-56 font-azeret fw-bold bg-asphalt">04</div>
           <h3 class="fz-4 lh-base mb-4 fw-bold text-light">提供滿意度</h3>
           <p class="fz-7 lh-base text-light flex-grow-1">提供課程滿意度及回饋<br>讓我們持續成長與進步</p>
@@ -173,7 +173,9 @@ current: index
 
       <ul class="row row-cols-1 row-cols-md-2 row-cols-lg-4 mb-6 mb-lg-12">
         <li class="col-md-6 col-lg-3 text-start mb-6 mb-lg-0">
-          <div class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
+          <div data-aos="flip-left"
+          data-aos-easing="ease-out-cubic"
+          data-aos-duration="2000" class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
             <img src="./assets/images/teacher01.jpg" alt="avatar" class="card-img-top mt-6 avatar-size radius-circle mb-2 mx-auto">
             <p class="text-center">Belinda</p>
             <div class="card-body px-6 px-md-8 pt-6 pb-4 pb-md-8">
@@ -187,7 +189,9 @@ current: index
           </div>
         </li>
         <li class="col-md-6 col-lg-3 text-start mb-6 mb-lg-0">
-          <div class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
+          <div data-aos="flip-left"
+          data-aos-easing="ease-out-cubic"
+          data-aos-duration="2000" class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
             <img src="./assets/images/teacher02.jpg" alt="avatar" class="card-img-top mt-6 avatar-size radius-circle mb-2 mx-auto">
             <p2022 class="text-center">Guava</p2022 Python 全攻略｜從入門到實務>
             <div class="card-body px-6 px-md-8 pt-6 pb-4 pb-md-8">
@@ -201,7 +205,9 @@ current: index
           </div>
         </li>
         <li class="col-md-6 col-lg-3 text-start mb-6 mb-lg-0">
-          <div class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
+          <div data-aos="flip-left"
+          data-aos-easing="ease-out-cubic"
+          data-aos-duration="2000" class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
             <img src="./assets/images/teacher03.jpg" alt="avatar" class="card-img-top mt-6 avatar-size radius-circle mb-2 mx-auto">
             <p class="text-center">Joe</p>
             <div class="card-body px-6 px-md-8 pt-6 pb-4 pb-md-8">
@@ -215,7 +221,9 @@ current: index
           </div>
         </li>
         <li class="col-md-6 col-lg-3 text-start mb-6 mb-lg-0">
-          <div class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
+          <div data-aos="flip-left"
+          data-aos-easing="ease-out-cubic"
+          data-aos-duration="2000" class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
             <img src="./assets/images/teacher04.jpg" alt="avatar" class="card-img-top mt-6 avatar-size radius-circle mb-2 mx-auto">
             <p class="text-center">Lina</p>
             <div class="card-body px-6 px-md-8 pt-6 pb-4 pb-md-8">
@@ -238,28 +246,28 @@ current: index
 <section class="bg-dark container-fluid">
   <ul class="row">
     <li class="improve-item-1 col-md-6 col-lg-3 h-263-px">
-      <div class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
+      <div data-aos="zoom-out-down" class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
         <span class="material-icons icon-size-32 mb-4 text-primary">question_answer</span>
         <h3 class="improve-title fz-4 fw-bold lh-base pb-4 mb-8 title-border-left-middle">對症下藥，專案製作</h3>
         <p class="improve-text fz-7 lh-base">除了可以瘋狂提問之外 還有機會一起完成專案</p>
       </div>
     </li>
     <li class="improve-item-2 col-md-6 col-lg-3 h-263-px">
-      <div class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
+      <div data-aos="zoom-out-down" class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
         <span class="material-icons icon-size-32 fz-2 mb-4 text-primary">tips_and_updates</span>
         <h3 class="improve-title fz-4 fw-bold lh-base pb-4 mb-8 title-border-left-middle">激發你的學習潛力</h3>
         <p class="improve-text fz-7 lh-base">進度制課程安排&個人化學習建議 有效管理你的學習動力</p>
       </div>
     </li>
     <li class="improve-item-3 col-md-6 col-lg-3 h-263-px">
-      <div class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
+      <div data-aos="zoom-out-down" class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
         <span class="material-icons icon-size-32 fz-2 mb-4 text-primary">thumb_up_alt</span>
         <h3 class="improve-title fz-4 fw-bold lh-base pb-4 mb-8 title-border-left-middle">學習效率</h3>
         <p class="improve-text fz-7 lh-base">針對學員狀況調整內容與步調 學習精準最有效</p>
       </div>
     </li>
     <li class="improve-item-4 col-md-6 col-lg-3 h-263-px">
-      <div class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
+      <div data-aos="zoom-out-down" class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
         <span class="material-icons icon-size-32 fz-2 mb-4 text-primary">people</span>
         <h3 class="improve-title fz-4 fw-bold lh-base pb-4 mb-8 title-border-left-middle">一對一指導</h3>
         <p class="improve-text fz-7 lh-base">針對目的進行客製化課程安排 快速的學以致用</p>
@@ -274,7 +282,10 @@ current: index
     <h2 class="fz-3 fw-bold lh-lg-40 pb-4 mb-12 title-border-middle">文章分享</h2>
     <ul class="row">
       <li class="col-lg-4 mb-6 mb-lg-0">
-        <div class="card text-start border-0 p-8 bg-asphalt">
+        <div data-aos="fade-zoom-in"
+        data-aos-easing="ease-in-back"
+        data-aos-delay="300"
+        data-aos-offset="0" class="card text-start border-0 p-8 bg-asphalt">
           <div class="squareRounded squareRounded-topLeft position-absolute top-0 left-0 translate-middle"></div>
           <div class="squareRounded squareRounded-topRight position-absolute top-0 left-100 translate-middle"></div>
           <div class="squareRounded squareRounded-bottomLeft position-absolute top-100 left-0 translate-middle"></div>
@@ -288,7 +299,10 @@ current: index
         </div>
       </li>
       <li class="col-lg-4 mb-6 mb-lg-0">
-        <div class="card text-start border-0 p-8 bg-asphalt">
+        <div data-aos="fade-zoom-in"
+        data-aos-easing="ease-in-back"
+        data-aos-delay="300"
+        data-aos-offset="0" class="card text-start border-0 p-8 bg-asphalt">
           <div class="squareRounded squareRounded-topLeft position-absolute top-0 left-0 translate-middle"></div>
           <div class="squareRounded squareRounded-topRight position-absolute top-0 left-100 translate-middle"></div>
           <div class="squareRounded squareRounded-bottomLeft position-absolute top-100 left-0 translate-middle"></div>
@@ -302,7 +316,10 @@ current: index
         </div>
       </li> 
       <li class="col-lg-4">
-        <div class="card text-start border-0 p-8 bg-asphalt">
+        <div data-aos="fade-zoom-in"
+        data-aos-easing="ease-in-back"
+        data-aos-delay="300"
+        data-aos-offset="0" class="card text-start border-0 p-8 bg-asphalt">
           <div class="squareRounded squareRounded-topLeft position-absolute top-0 left-0 translate-middle"></div>
           <div class="squareRounded squareRounded-topRight position-absolute top-0 left-100 translate-middle"></div>
           <div class="squareRounded squareRounded-bottomLeft position-absolute top-100 left-0 translate-middle"></div>
@@ -423,7 +440,8 @@ current: index
   <div class="container">
     <div class="row">
       <div class="col-lg-10 mx-auto">
-        <div class="border-0 py-10 px-6 p-lg-8 bg-mine-shaft radius-24 d-flex flex-column flex-md-row justify-content-between align-items-center position-relative">
+        <div data-aos="fade-up"
+        data-aos-anchor-placement="center-bottom" class="border-0 py-10 px-6 p-lg-8 bg-mine-shaft radius-24 d-flex flex-column flex-md-row justify-content-between align-items-center position-relative">
           <div class="d-flex flex-column flex-md-row">
             <span class="material-icons book-icon mr-md-3 mr-lg-12 fz-80-px mx-auto mb-4 mb-md-0">menu_book</span>
             <div class="text-center text-md-start">
