視差滾動修改

--- a/app/index.html
+++ b/app/index.html
@@ -282,9 +282,9 @@ current: index
     <h2 class="fz-3 fw-bold lh-lg-40 pb-4 mb-12 title-border-middle">文章分享</h2>
     <ul class="row">
       <li class="col-lg-4 mb-6 mb-lg-0">
-        <div data-aos="fade-zoom-in"
+        <div data-aos="fade-up-right"
         data-aos-easing="ease-in-back"
-        data-aos-delay="300"
+        data-aos-duration="1000"
         data-aos-offset="0" class="card text-start border-0 p-8 bg-asphalt">
           <div class="squareRounded squareRounded-topLeft position-absolute top-0 left-0 translate-middle"></div>
           <div class="squareRounded squareRounded-topRight position-absolute top-0 left-100 translate-middle"></div>
@@ -299,9 +299,9 @@ current: index
         </div>
       </li>
       <li class="col-lg-4 mb-6 mb-lg-0">
-        <div data-aos="fade-zoom-in"
+        <div data-aos="fade-up-right"
         data-aos-easing="ease-in-back"
-        data-aos-delay="300"
+        data-aos-duration="1000"
         data-aos-offset="0" class="card text-start border-0 p-8 bg-asphalt">
           <div class="squareRounded squareRounded-topLeft position-absolute top-0 left-0 translate-middle"></div>
           <div class="squareRounded squareRounded-topRight position-absolute top-0 left-100 translate-middle"></div>
@@ -316,9 +316,9 @@ current: index
         </div>
       </li> 
       <li class="col-lg-4">
-        <div data-aos="fade-zoom-in"
+        <div data-aos="fade-up-right"
         data-aos-easing="ease-in-back"
-        data-aos-delay="300"
+        data-aos-duration="1000"
         data-aos-offset="0" class="card text-start border-0 p-8 bg-asphalt">
           <div class="squareRounded squareRounded-topLeft position-absolute top-0 left-0 translate-middle"></div>
           <div class="squareRounded squareRounded-topRight position-absolute top-0 left-100 translate-middle"></div>
