AOS套件引入位置修正

--- a/app/course.html
+++ b/app/course.html
@@ -37,7 +37,7 @@ current: course
     <div class="row">
 
       <div class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec radius-24 mb-6 mb-lg-8">
-        <div class="d-flex flex-column flex-lg-row justify-content-between">
+        <div data-aos="zoom-in-down" class="d-flex flex-column flex-lg-row justify-content-between">
           <div class="d-lg-flex course-main">
             <div class="course-header mb-6 mb-lg-0 mr-lg-12">
               <img src="./assets/images/teacher01.jpg" alt="avatar" class="avatar-size radius-circle mb-2 mb-lg-0 mx-auto mx-lg-0 ">
