Animate.css 套件引入

--- a/app/index.html
+++ b/app/index.html
@@ -345,7 +345,7 @@ current: index
       <div class="col-md-12">
 
         <!-- Slider main container -->
-        <div class="swiper powerswiper">
+        <div class="swiper powerswiper animate__animated animate__rubberBand">
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
