輪播圖片框邊位移效果

--- a/app/index.html
+++ b/app/index.html
@@ -352,7 +352,7 @@ current: index
             <div class="swiper-slide position-relative">
 
               <div class="swiper-item row justify-content-center align-items-center">
-                <div class="col-lg-5 mb-12">
+                <div class="col-lg-5 mb-12 swiper-img-outer position-relative">
                   <img class="swiper-img img-fluid radius-24"
                         src="./assets/images/share.jpg"
                         alt="share picture 1">
@@ -371,7 +371,7 @@ current: index
 
             <div class="swiper-slide position-relative">
               <div class="swiper-item row justify-content-center align-items-center">
-                <div class="col-lg-5 mb-12">
+                <div class="col-lg-5 mb-12 swiper-img-outer position-relative">
                   <img class="swiper-img img-fluid radius-24"
                         src="https://images.unsplash.com/photo-1488190211105-8b0e65b80b4e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
                         alt="share picture 2">
@@ -388,7 +388,7 @@ current: index
             </div>
             <div class="swiper-slide position-relative">
               <div class="swiper-item row justify-content-center align-items-center">
-                <div class="col-lg-5 mb-12">
+                <div class="col-lg-5 mb-12 swiper-img-outer position-relative">
                   <img class="swiper-img img-fluid radius-24"
                         src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
                         alt="share picture 3">
@@ -405,7 +405,7 @@ current: index
             </div>
             <div class="swiper-slide position-relative">
               <div class="swiper-item row justify-content-center align-items-center">
-                <div class="col-lg-5 mb-12">
+                <div class="col-lg-5 mb-12 swiper-img-outer position-relative">
                   <img class="swiper-img img-fluid radius-24"
                         src="https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
                         alt="share picture 4">
