新增課程介紹頁

--- a/app/course.html
+++ b/app/course.html
@@ -1,5 +1,5 @@
 ---
-title: 課程介紹
+title: 所有課程列表
 layout: ./app/layout.ejs
 engine: ejs
 current: course
@@ -53,7 +53,7 @@ current: course
           <div class="course-footer">
             <p class="font-azeret text-center align-bottom fz-2 lh-37 mb-lg-4 fw-bold"><span class="fz-8 mr-2 mb-lg-1 fw-normal">50分鐘</span>NT$1600</p>
             <div class="d-flex flex-lg-column justify-content-center">
-              <a href="#" class="text-light fz-7 border border-light radius-8 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
+              <a href="./course-detail.html" class="text-light fz-7 border border-light radius-8 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
               <a href="#" class="btn text-light bg-gradient fz-7 d-block radius-8 border-0 py-2 px-4">立即預約</a>
             </div>
           </div>
@@ -77,7 +77,7 @@ current: course
           <div class="course-footer">
             <p class="font-azeret text-center align-bottom fz-2 lh-37 mb-lg-4 fw-bold"><span class="fz-8 mr-2 mb-lg-1 fw-normal">50分鐘</span>NT$2000</p>
             <div class="d-flex flex-lg-column justify-content-center">
-              <a href="#" class="text-light fz-7 border border-light radius-8 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
+              <a href="./course-detail.html" class="text-light fz-7 border border-light radius-8 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
               <a href="#" class="btn text-light bg-gradient fz-7 d-block radius-8 border-0 py-2 px-4">立即預約</a>
             </div>
           </div>
@@ -101,7 +101,7 @@ current: course
           <div class="course-footer">
             <p class="font-azeret text-center align-bottom fz-2 lh-37 mb-lg-4 fw-bold"><span class="fz-8 mr-2 mb-lg-1 fw-normal">50分鐘</span>NT$1800</p>
             <div class="d-flex flex-lg-column justify-content-center">
-              <a href="#" class="text-light fz-7 border border-light radius-8 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
+              <a href="./course-detail.html" class="text-light fz-7 border border-light radius-8 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
               <a href="#" class="btn text-light bg-gradient fz-7 d-block radius-8 border-0 py-2 px-4">立即預約</a>
             </div>
           </div>
@@ -125,7 +125,7 @@ current: course
           <div class="course-footer">
             <p class="font-azeret text-center align-bottom fz-2 lh-37 mb-lg-4 fw-bold"><span class="fz-8 mr-2 mb-lg-1 fw-normal">50分鐘</span>NT$1100</p>
             <div class="d-flex flex-lg-column justify-content-center">
-              <a href="#" class="text-light fz-7 border border-light radius-8 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
+              <a href="./course-detail.html" class="text-light fz-7 border border-light radius-8 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
               <a href="#" class="btn text-light bg-gradient fz-7 d-block radius-8 border-0 py-2 px-4">立即預約</a>
             </div>
           </div>
