--- a/app/index.html
+++ b/app/index.html
@@ -178,7 +178,7 @@ current: index
           data-aos-duration="2000" class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
             <img src="./assets/images/teacher01.jpg" alt="avatar" class="card-img-top mt-6 avatar-size radius-circle mb-2 mx-auto">
             <p class="text-center">Belinda</p>
-            <div class="card-body px-6 px-md-8 pt-6 pb-4 pb-md-8">
+            <div class="card-body px-8 px-md-6 pt-6 pb-8">
               <h3 class="fz-6 lh-base">基礎前端 - HTML</h3>
               <div>
                 <h4 class="text-primary fz-8 lh-base">前端語言</h4>
@@ -194,7 +194,7 @@ current: index
           data-aos-duration="2000" class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
             <img src="./assets/images/teacher02.jpg" alt="avatar" class="card-img-top mt-6 avatar-size radius-circle mb-2 mx-auto">
             <p2022 class="text-center">Guava</p2022 Python 全攻略｜從入門到實務>
-            <div class="card-body px-6 px-md-8 pt-6 pb-4 pb-md-8">
+            <div class="card-body px-8 px-md-6 pt-6 pb-8">
               <h3 class="fz-6 lh-base">2022 Python 全攻略｜從入門到實務</h3>
               <div>
                 <h4 class="text-primary fz-8 lh-base">後端語言</h4>
@@ -210,7 +210,7 @@ current: index
           data-aos-duration="2000" class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
             <img src="./assets/images/teacher03.jpg" alt="avatar" class="card-img-top mt-6 avatar-size radius-circle mb-2 mx-auto">
             <p class="text-center">Joe</p>
-            <div class="card-body px-6 px-md-8 pt-6 pb-4 pb-md-8">
+            <div class="card-body px-8 px-md-6 pt-6 pb-8">
               <h3 class="fz-6 lh-base">活用 Line Bot ｜APP 開發到上架完整實戰攻略</h3>
               <div>
                 <h4 class="text-primary fz-8 lh-base">行動應用開發</h4>
@@ -226,7 +226,7 @@ current: index
           data-aos-duration="2000" class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
             <img src="./assets/images/teacher04.jpg" alt="avatar" class="card-img-top mt-6 avatar-size radius-circle mb-2 mx-auto">
             <p class="text-center">Lina</p>
-            <div class="card-body px-6 px-md-8 pt-6 pb-4 pb-md-8">
+            <div class="card-body px-8 px-md-6 pt-6 pb-8">
               <h3 class="fz-6 lh-base">Linux 零基礎七天入門｜入門到實務</h3>
               <div>
                 <h4 class="text-primary fz-8 lh-base">作業系統與伺服器</h4>
@@ -238,7 +238,7 @@ current: index
         </li>
       </ul>
 
-      <a href="#" class="col-6 col-lg-2 mx-auto btn text-light bg-gradient fz-7 py-2 px-8 d-inline-block radius-8 border-0">所有課程列表</a>
+      <a href="./course.html" class="col-6 col-lg-2 mx-auto btn text-light bg-gradient fz-7 py-2 px-8 d-inline-block radius-8 border-0">所有課程列表</a>
     </div>
   </div>
 </section>
