新增課程報名

--- a/app/course.html
+++ b/app/course.html
@@ -36,11 +36,11 @@ current: course
 
     <div class="row">
 
-      <div class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec radius-24 mb-6 mb-lg-8">
+      <div class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec rounded-6 mb-6 mb-lg-8">
         <div class="d-flex flex-column flex-lg-row justify-content-between animate__animated course-animate">
           <div class="d-lg-flex course-main">
             <div class="course-header mb-6 mb-lg-0 mr-lg-12">
-              <img src="./assets/images/teacher01.jpg" alt="avatar" class="avatar-size radius-circle mb-2 mb-lg-0 mx-auto mx-lg-0 ">
+              <img src="./assets/images/teacher01.jpg" alt="avatar" class="avatar-size rounded-circle mb-2 mb-lg-0 mx-auto mx-lg-0 ">
               <p class="text-center">Belinda</p>
             </div>
             <div class="course-body text-start mb-12 mb-lg-0">
@@ -53,18 +53,18 @@ current: course
           <div class="course-footer">
             <p class="font-azeret text-center align-bottom fz-2 lh-37 mb-lg-4 fw-bold"><span class="fz-8 mr-2 mb-lg-1 fw-normal">50分鐘</span>NT$1600</p>
             <div class="d-flex flex-lg-column justify-content-center">
-              <a href="./course-detail.html" class="text-light fz-7 border border-light radius-8 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
-              <a href="#" class="btn text-light bg-gradient fz-7 d-block radius-8 border-0 py-2 px-4">立即預約</a>
+              <a href="./course-detail.html" class="text-light fz-7 border border-light rounded-2 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
+              <a href="./pay-register.html" class="btn text-light bg-gradient fz-7 d-block rounded-2 border-0 py-2 px-4">立即預約</a>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec radius-24 mb-6 mb-lg-8">
+      <div class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec rounded-6 mb-6 mb-lg-8">
         <div class="d-flex flex-column flex-lg-row justify-content-between animate__animated course-animate">
           <div class="d-lg-flex course-main">
             <div class="course-header mb-6 mb-lg-0 mr-lg-12">
-              <img src="./assets/images/teacher02.jpg" alt="avatar2" class="avatar-size radius-circle mb-2 mb-lg-0 mx-auto mx-lg-auto ">
+              <img src="./assets/images/teacher02.jpg" alt="avatar2" class="avatar-size rounded-circle mb-2 mb-lg-0 mx-auto mx-lg-auto ">
               <p class="text-center">Guava</p>
             </div>
             <div class="course-body text-start mb-12 mb-lg-0">
@@ -77,18 +77,18 @@ current: course
           <div class="course-footer">
             <p class="font-azeret text-center align-bottom fz-2 lh-37 mb-lg-4 fw-bold"><span class="fz-8 mr-2 mb-lg-1 fw-normal">50分鐘</span>NT$2000</p>
             <div class="d-flex flex-lg-column justify-content-center">
-              <a href="./course-detail.html" class="text-light fz-7 border border-light radius-8 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
-              <a href="#" class="btn text-light bg-gradient fz-7 d-block radius-8 border-0 py-2 px-4">立即預約</a>
+              <a href="./course-detail.html" class="text-light fz-7 border border-light rounded-2 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
+              <a href="./pay-register.html" class="btn text-light bg-gradient fz-7 d-block rounded-2 border-0 py-2 px-4">立即預約</a>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec radius-24 mb-6 mb-lg-8">
+      <div class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec rounded-6 mb-6 mb-lg-8">
         <div class="d-flex flex-column flex-lg-row justify-content-between animate__animated course-animate">
           <div class="d-lg-flex course-main">
             <div class="course-header mb-6 mb-lg-0 mr-lg-12">
-              <img src="./assets/images/teacher03.jpg" alt="avatar3" class="avatar-size radius-circle mb-2 mb-lg-0 mx-auto mx-lg-auto ">
+              <img src="./assets/images/teacher03.jpg" alt="avatar3" class="avatar-size rounded-circle mb-2 mb-lg-0 mx-auto mx-lg-auto ">
               <p class="text-center">Joe</p>
             </div>
             <div class="course-body text-start mb-12 mb-lg-0">
@@ -101,18 +101,18 @@ current: course
           <div class="course-footer">
             <p class="font-azeret text-center align-bottom fz-2 lh-37 mb-lg-4 fw-bold"><span class="fz-8 mr-2 mb-lg-1 fw-normal">50分鐘</span>NT$1800</p>
             <div class="d-flex flex-lg-column justify-content-center">
-              <a href="./course-detail.html" class="text-light fz-7 border border-light radius-8 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
-              <a href="#" class="btn text-light bg-gradient fz-7 d-block radius-8 border-0 py-2 px-4">立即預約</a>
+              <a href="./course-detail.html" class="text-light fz-7 border border-light rounded-2 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
+              <a href="./pay-register.html" class="btn text-light bg-gradient fz-7 d-block rounded-2 border-0 py-2 px-4">立即預約</a>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec radius-24 mb-6 mb-lg-8">
+      <div class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec rounded-6 mb-6 mb-lg-8">
         <div class="d-flex flex-column flex-lg-row justify-content-between animate__animated course-animate">
           <div class="d-lg-flex course-main">
             <div class="course-header mb-6 mb-lg-0 mr-lg-12">
-              <img src="./assets/images/teacher04.jpg" alt="avatar4" class="avatar-size radius-circle mb-2 mb-lg-0 mx-auto mx-lg-auto ">
+              <img src="./assets/images/teacher04.jpg" alt="avatar4" class="avatar-size rounded-circle mb-2 mb-lg-0 mx-auto mx-lg-auto ">
               <p class="text-center">Lina</p>
             </div>
             <div class="course-body text-start mb-12 mb-lg-0">
@@ -125,8 +125,8 @@ current: course
           <div class="course-footer">
             <p class="font-azeret text-center align-bottom fz-2 lh-37 mb-lg-4 fw-bold"><span class="fz-8 mr-2 mb-lg-1 fw-normal">50分鐘</span>NT$1100</p>
             <div class="d-flex flex-lg-column justify-content-center">
-              <a href="./course-detail.html" class="text-light fz-7 border border-light radius-8 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
-              <a href="#" class="btn text-light bg-gradient fz-7 d-block radius-8 border-0 py-2 px-4">立即預約</a>
+              <a href="./course-detail.html" class="text-light fz-7 border border-light rounded-2 py-2 px-4 mr-2 mr-lg-0 mb-lg-2">課程介紹</a>
+              <a href="./pay-register.html" class="btn text-light bg-gradient fz-7 d-block rounded-2 border-0 py-2 px-4">立即預約</a>
             </div>
           </div>
         </div>
