--- a/app/course-detail.html
+++ b/app/course-detail.html
@@ -10,10 +10,10 @@ current: course-detail
     <div class="row">
       <div class="col-lg-7 offset-lg-1">
 
-        <div class="d-lg-flex p-6 pb-12 p-lg-12 mb-10 mb-lg-12 bg-aztec radius-24">
+        <div class="d-lg-flex p-6 pb-12 p-lg-12 mb-10 mb-lg-12 bg-aztec rounded-6">
 
           <div class="mr-lg-12 w-25">
-            <img src="./assets/images/teacher01.jpg" alt="avatar" class="avatar-size radius-circle mb-2">
+            <img src="./assets/images/teacher01.jpg" alt="avatar" class="avatar-size rounded-circle mb-2">
             <p class="text-center">Belinda</p>
           </div>
 
@@ -26,7 +26,7 @@ current: course-detail
 
         <h3 class="fz-6 text-start mb-4">老師介紹</h3>
 
-        <div class="bg-aztec radius-24 p-6 p-lg-8 mb-10 mb-lg-12">
+        <div class="bg-aztec rounded-6 p-6 p-lg-8 mb-10 mb-lg-12">
           <div class="row pb-2 pb-lg-4 mb-6 mb-lg-8 border-bottom-silver">
             <div class="animate__animated animate__fadeInTopLeft col-lg-6 mb-4 order-lg-1">
               <p class="text-start"><span class="material-icons icon-size-24 text-primary mr-2 align-middle">school</span><span class="text-silver mr-2">學歷</span>國立中央大學 資訊工程 碩士 畢業</p>
@@ -47,7 +47,7 @@ current: course-detail
 
         <h3 class="fz-6 text-start mb-4">課程簡介</h3>
 
-        <div class="bg-aztec radius-24 p-6 p-lg-8 pr-lg-6 text-start mb-11 mb-lg-0">
+        <div class="bg-aztec rounded-6 p-6 p-lg-8 pr-lg-6 text-start mb-11 mb-lg-0">
           <h4 data-aos="flip-up" class="fz-7 pl-2 border-left-primary mb-4">這堂課你將會學到：</h4>
           <ol class="list-style-type-square mb-8">
             <li data-aos="fade-left">網頁設計，基礎知識</li>
@@ -73,35 +73,35 @@ current: course-detail
               <p class="fz-4 lh-28 font-azeret">NT$1600</p>
               <span class="fz-8 lh-base mt-0">1堂50分鐘</span>
             </div>
-            <a href="#" class="stretched-link radius-circle text-light bg-gradient border-0 icon-size-32"><span class="material-icons text-center fz-8 p-2">chevron_right</span></a>
+            <a href="./pay-register.html" class="stretched-link rounded-circle text-light bg-gradient border-0 icon-size-32"><span class="material-icons text-center fz-8 p-2">chevron_right</span></a>
           </div>
           <div class="d-flex justify-content-between align-items-center border-bottom-light pb-4 mb-4 position-relative course-menu-item">
             <div class="text-start">
               <p class="fz-4 lh-28 font-azeret">NT$1400</p>
               <span class="fz-8 lh-base mt-0">3堂50分鐘</span>
             </div>
-            <a href="#" class="stretched-link radius-circle text-light bg-gradient border-0 icon-size-32"><span class="material-icons text-center fz-8 p-2">chevron_right</span></a>
+            <a href="./pay-register.html" class="stretched-link rounded-circle text-light bg-gradient border-0 icon-size-32"><span class="material-icons text-center fz-8 p-2">chevron_right</span></a>
           </div>
           <div class="d-flex justify-content-between align-items-center border-bottom-light pb-4 mb-4 position-relative course-menu-item">
             <div class="text-start">
               <p class="fz-4 lh-28 font-azeret">NT$1000</p>
               <span class="fz-8 lh-base mt-0">10堂50分鐘</span>
             </div>
-            <a href="#" class="stretched-link radius-circle text-light bg-gradient border-0 icon-size-32"><span class="material-icons text-center fz-8 p-2">chevron_right</span></a>
+            <a href="./pay-register.html" class="stretched-link rounded-circle text-light bg-gradient border-0 icon-size-32"><span class="material-icons text-center fz-8 p-2">chevron_right</span></a>
           </div>
           <div class="d-flex justify-content-between align-items-center border-bottom-light pb-4 mb-4 position-relative course-menu-item">
             <div class="text-start">
               <p class="fz-4 lh-28 font-azeret">NT$900</p>
               <span class="fz-8 lh-base mt-0">20堂50分鐘</span>
             </div>
-            <a href="#" class="stretched-link radius-circle text-light bg-gradient border-0 icon-size-32"><span class="material-icons text-center fz-8 p-2">chevron_right</span></a>
+            <a href="./pay-register.html" class="stretched-link rounded-circle text-light bg-gradient border-0 icon-size-32"><span class="material-icons text-center fz-8 p-2">chevron_right</span></a>
           </div>
           <div class="d-flex justify-content-between align-items-center position-relative course-menu-item">
             <div class="text-start">
               <p class="fz-4 lh-28 font-azeret">洽談報價</p>
               <span class="fz-8 lh-base mt-0">客製化課程/專案製作</span>
             </div>
-            <a href="#" class="stretched-link radius-circle text-light bg-gradient border-0 icon-size-32"><span class="material-icons text-center fz-8 p-2">chevron_right</span></a>
+            <a href="./pay-register.html" class="stretched-link rounded-circle text-light bg-gradient border-0 icon-size-32"><span class="material-icons text-center fz-8 p-2">chevron_right</span></a>
           </div>
         </div>
       </aside>
@@ -118,8 +118,8 @@ current: course-detail
         <li class="col-md-6 col-lg-3 text-start mb-6 mb-lg-0">
           <div data-aos="flip-left"
           data-aos-easing="ease-out-cubic"
-          data-aos-duration="2000" class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
-            <img src="./assets/images/teacher01.jpg" alt="avatar" class="card-img-top mt-6 avatar-size radius-circle mb-2 mx-auto">
+          data-aos-duration="2000" class="card popular-item rounded-6 h-100  text-light bg-aztec border-blur200">
+            <img src="./assets/images/teacher01.jpg" alt="avatar" class="card-img-top mt-6 avatar-size rounded-circle mb-2 mx-auto">
             <p class="text-center">Belinda</p>
             <div class="card-body px-8 px-md-6 pt-6 pb-8">
               <h3 class="fz-6 lh-base">基礎前端 - HTML</h3>
@@ -134,8 +134,8 @@ current: course-detail
         <li class="col-md-6 col-lg-3 text-start mb-6 mb-lg-0">
           <div data-aos="flip-left"
           data-aos-easing="ease-out-cubic"
-          data-aos-duration="2000" class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
-            <img src="./assets/images/teacher02.jpg" alt="avatar" class="card-img-top mt-6 avatar-size radius-circle mb-2 mx-auto">
+          data-aos-duration="2000" class="card popular-item rounded-6 h-100  text-light bg-aztec border-blur200">
+            <img src="./assets/images/teacher02.jpg" alt="avatar" class="card-img-top mt-6 avatar-size rounded-circle mb-2 mx-auto">
             <p2022 class="text-center">Guava</p2022 Python 全攻略｜從入門到實務>
             <div class="card-body px-8 px-md-6 pt-6 pb-8">
               <h3 class="fz-6 lh-base">2022 Python 全攻略｜從入門到實務</h3>
@@ -150,8 +150,8 @@ current: course-detail
         <li class="col-md-6 col-lg-3 text-start mb-6 mb-md-0">
           <div data-aos="flip-left"
           data-aos-easing="ease-out-cubic"
-          data-aos-duration="2000" class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
-            <img src="./assets/images/teacher03.jpg" alt="avatar" class="card-img-top mt-6 avatar-size radius-circle mb-2 mx-auto">
+          data-aos-duration="2000" class="card popular-item rounded-6 h-100  text-light bg-aztec border-blur200">
+            <img src="./assets/images/teacher03.jpg" alt="avatar" class="card-img-top mt-6 avatar-size rounded-circle mb-2 mx-auto">
             <p class="text-center">Joe</p>
             <div class="card-body px-8 px-md-6 pt-6 pb-8">
               <h3 class="fz-6 lh-base">活用 Line Bot ｜APP 開發到上架完整實戰攻略</h3>
@@ -166,8 +166,8 @@ current: course-detail
         <li class="col-md-6 col-lg-3 text-start">
           <div data-aos="flip-left"
           data-aos-easing="ease-out-cubic"
-          data-aos-duration="2000" class="card popular-item radius-24 h-100  text-light bg-aztec border-blur200">
-            <img src="./assets/images/teacher04.jpg" alt="avatar" class="card-img-top mt-6 avatar-size radius-circle mb-2 mx-auto">
+          data-aos-duration="2000" class="card popular-item rounded-6 h-100  text-light bg-aztec border-blur200">
+            <img src="./assets/images/teacher04.jpg" alt="avatar" class="card-img-top mt-6 avatar-size rounded-circle mb-2 mx-auto">
             <p class="text-center">Lina</p>
             <div class="card-body px-8 px-md-6 pt-6 pb-8">
               <h3 class="fz-6 lh-base">Linux 零基礎七天入門｜入門到實務</h3>
