--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,10 @@ current: index
       </li>
 
       <li class="col-lg-3">
-        <div data-aos="fade-up-right" data-aos-duration="1000" class="adv-card py-12 px-6 border-transparent rounded-3"> 
+        <div 
+        data-aos="fade-up-right"
+        data-aos-duration="1000" 
+        class="adv-card py-12 px-6 border-transparent rounded-3"> 
           <span class="material-icons icon-size-50 fz-1 text-gradient">code</span>
           <section class="mt-6 d-flex flex-column flex-grow-1 h-120-px">
             <h4 class="mb-0 fz-7 lh-base fw-bold">超過 100 種專業課程</h4>
@@ -46,7 +49,10 @@ current: index
         </div>
       </li>
       <li class="col-lg-3">
-        <div data-aos="fade-up" data-aos-duration="1000" class="adv-card py-12 px-6 border-transparent rounded-3">
+        <div 
+        data-aos="fade-up" 
+        data-aos-duration="1000"
+        class="adv-card py-12 px-6 border-transparent rounded-3">
           <span class="material-icons icon-size-50 fz-1 text-gradient">rocket_launch</span>
           <section class="mt-6 d-flex flex-column flex-grow-1 h-120-px">
             <h4 class="mb-0 fz-7 lh-base fw-bold">高效學習</h4>
@@ -56,7 +62,10 @@ current: index
         </div>
       </li>
       <li class="col-lg-3">
-        <div data-aos="fade-up-left" data-aos-duration="1000" class="adv-card py-12 px-6 border-transparent rounded-3">
+        <div 
+        data-aos="fade-up-left" 
+        data-aos-duration="1000"
+        class="adv-card py-12 px-6 border-transparent rounded-3">
           <span class="material-icons icon-size-50 fz-1 text-gradient">place</span>
           <section class="mt-6 d-flex flex-column flex-grow-1 h-120-px">
             <h4 class="mb-0 fz-7 lh-base fw-bold">指定地點</h4>
@@ -74,28 +83,40 @@ current: index
 
     <ul class="row">
       <li class="col-md-6 col-lg-3 text-start mb-12 mb-lg-0 d-flex">
-        <a href="#" data-aos="zoom-in-up" data-aos-duration="1500" class="position-relative p-12 border border-light rounded-3 d-flex flex-column w-100">
+        <a href="#" 
+        data-aos="zoom-in-up"
+        data-aos-duration="1500"
+        class="position-relative p-12 border border-light rounded-3 d-flex flex-column w-100">
           <div class="num-absolute fz-1 px-2 lh-56 font-azeret fw-bold bg-asphalt">01</div>
           <h3 class="fz-4 lh-base mb-4 fw-bold text-light">預約</h3>
           <p class="fz-7 lh-base text-light flex-grow-1">線上預約指定課程與老師<br>由老師安排專屬課程</p>
         </a>
       </li>
       <li class="col-md-6 col-lg-3 text-start mb-12 mb-lg-0 d-flex">
-        <a href="#" data-aos="zoom-in-up" data-aos-duration="1500" class="position-relative p-12 border border-light rounded-3 d-flex flex-column w-100">
+        <a href="#" 
+        data-aos="zoom-in-up" 
+        data-aos-duration="1500" 
+        class="position-relative p-12 border border-light rounded-3 d-flex flex-column w-100">
           <div class="num-absolute fz-1 px-2 lh-56 font-azeret fw-bold bg-asphalt">02</div>
           <h3 class="fz-4 lh-base mb-4 fw-bold text-light">付款</h3>
           <p class="fz-7 lh-base text-light flex-grow-1">支援各種支付方式<br>提供12期分期付款</p>
         </a>
       </li>
       <li class="col-md-6 col-lg-3 text-start mb-12 mb-md-0 d-flex">
-        <a href="#" data-aos="zoom-in-up" data-aos-duration="1500" class="position-relative p-12 border border-light rounded-3 d-flex flex-column w-100">
+        <a href="#" 
+        data-aos="zoom-in-up" 
+        data-aos-duration="1500"
+        class="position-relative p-12 border border-light rounded-3 d-flex flex-column w-100">
           <div class="num-absolute fz-1 px-2 lh-56 font-azeret fw-bold bg-asphalt">03</div>
           <h3 class="fz-4 lh-base mb-4 fw-bold text-light">上課</h3>
           <p class="fz-7 lh-base text-light flex-grow-1">地點由您指定<br>密集性一對一教學</p>
         </a>
       </li>
       <li class="col-md-6 col-lg-3 text-start d-flex">
-        <a href="#" data-aos="zoom-in-up" data-aos-duration="1500" class="position-relative p-12 border border-light rounded-3 d-flex flex-column w-100">
+        <a href="#" 
+        data-aos="zoom-in-up" 
+        data-aos-duration="1500" 
+        class="position-relative p-12 border border-light rounded-3 d-flex flex-column w-100">
           <div class="num-absolute fz-1 px-2 lh-56 font-azeret fw-bold bg-asphalt">04</div>
           <h3 class="fz-4 lh-base mb-4 fw-bold text-light">提供滿意度</h3>
           <p class="fz-7 lh-base text-light flex-grow-1">提供課程滿意度及回饋<br>讓我們持續成長與進步</p>
@@ -106,7 +127,6 @@ current: index
 </section>
 
 <section class="bg-aztec container-fluid py-10 py-lg-20">
-
     <h2 class="d-none d-lg-block fz-3 fw-bold lh-lg-40 pb-4 mb-12 title-border-middle">預期你想要學習的程式，都在這裡</h2>
     <h2 class="d-lg-none fz-4 fw-bold lh-base pb-4 mb-6 title-border-middle">你想要學習的程式，<br>都在這裡</h2>
     <div class="swiper-height-restrict">
@@ -163,7 +183,6 @@ current: index
         </div>
       </div>
     </div>
-
 </section>
 
 <section class="bg-dark container-fluid py-10 py-lg-20 above-header">
@@ -173,9 +192,11 @@ current: index
 
       <ul class="row row-cols-1 row-cols-md-2 row-cols-lg-4 mb-6 mb-lg-12">
         <li class="col-md-6 col-lg-3 text-start mb-6 mb-lg-0">
-          <div data-aos="flip-left"
+          <div 
+          data-aos="flip-left"
           data-aos-easing="ease-out-cubic"
-          data-aos-duration="2000" class="card popular-item rounded-6 h-100  text-light bg-aztec border-blur200">
+          data-aos-duration="2000" 
+          class="card popular-item rounded-6 h-100  text-light bg-aztec border-blur200">
             <img src="./assets/images/teacher01.jpg" alt="avatar" class="card-img-top mt-6 avatar-size rounded-circle mb-2 mx-auto">
             <p class="text-center">Belinda</p>
             <div class="card-body px-8 px-md-6 pt-6 pb-8">
@@ -189,9 +210,11 @@ current: index
           </div>
         </li>
         <li class="col-md-6 col-lg-3 text-start mb-6 mb-lg-0">
-          <div data-aos="flip-left"
+          <div 
+          data-aos="flip-left"
           data-aos-easing="ease-out-cubic"
-          data-aos-duration="2000" class="card popular-item rounded-6 h-100  text-light bg-aztec border-blur200">
+          data-aos-duration="2000" 
+          class="card popular-item rounded-6 h-100  text-light bg-aztec border-blur200">
             <img src="./assets/images/teacher02.jpg" alt="avatar" class="card-img-top mt-6 avatar-size rounded-circle mb-2 mx-auto">
             <p2022 class="text-center">Guava</p2022 Python 全攻略｜從入門到實務>
             <div class="card-body px-8 px-md-6 pt-6 pb-8">
@@ -205,9 +228,11 @@ current: index
           </div>
         </li>
         <li class="col-md-6 col-lg-3 text-start mb-6 mb-lg-0">
-          <div data-aos="flip-left"
+          <div 
+          data-aos="flip-left"
           data-aos-easing="ease-out-cubic"
-          data-aos-duration="2000" class="card popular-item rounded-6 h-100  text-light bg-aztec border-blur200">
+          data-aos-duration="2000" 
+          class="card popular-item rounded-6 h-100  text-light bg-aztec border-blur200">
             <img src="./assets/images/teacher03.jpg" alt="avatar" class="card-img-top mt-6 avatar-size rounded-circle mb-2 mx-auto">
             <p class="text-center">Joe</p>
             <div class="card-body px-8 px-md-6 pt-6 pb-8">
@@ -221,9 +246,11 @@ current: index
           </div>
         </li>
         <li class="col-md-6 col-lg-3 text-start mb-6 mb-lg-0">
-          <div data-aos="flip-left"
+          <div 
+          data-aos="flip-left"
           data-aos-easing="ease-out-cubic"
-          data-aos-duration="2000" class="card popular-item rounded-6 h-100  text-light bg-aztec border-blur200">
+          data-aos-duration="2000" 
+          class="card popular-item rounded-6 h-100  text-light bg-aztec border-blur200">
             <img src="./assets/images/teacher04.jpg" alt="avatar" class="card-img-top mt-6 avatar-size rounded-circle mb-2 mx-auto">
             <p class="text-center">Lina</p>
             <div class="card-body px-8 px-md-6 pt-6 pb-8">
@@ -246,28 +273,36 @@ current: index
 <section class="bg-dark container-fluid">
   <ul class="row">
     <li class="improve-item-1 col-md-6 col-lg-3 h-263-px">
-      <div data-aos="zoom-out-down" class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
+      <div
+      data-aos="zoom-out-down" 
+      class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
         <span class="material-icons icon-size-32 mb-4 text-primary">question_answer</span>
         <h3 class="improve-title fz-4 fw-bold lh-base pb-4 mb-8 title-border-left-middle word-nowrap">對症下藥，專案製作</h3>
         <p class="improve-text fz-7 lh-base">除了可以瘋狂提問之外 還有機會一起完成專案</p>
       </div>
     </li>
     <li class="improve-item-2 col-md-6 col-lg-3 h-263-px">
-      <div data-aos="zoom-out-down" class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
+      <div 
+      data-aos="zoom-out-down" 
+      class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
         <span class="material-icons icon-size-32 fz-2 mb-4 text-primary">tips_and_updates</span>
         <h3 class="improve-title fz-4 fw-bold lh-base pb-4 mb-8 title-border-left-middle word-nowrap">激發你的學習潛力</h3>
         <p class="improve-text fz-7 lh-base">進度制課程安排&個人化學習建議 有效管理你的學習動力</p>
       </div>
     </li>
     <li class="improve-item-3 col-md-6 col-lg-3 h-263-px">
-      <div data-aos="zoom-out-down" class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
+      <div 
+      data-aos="zoom-out-down" 
+      class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
         <span class="material-icons icon-size-32 fz-2 mb-4 text-primary">thumb_up_alt</span>
         <h3 class="improve-title fz-4 fw-bold lh-base pb-4 mb-8 title-border-left-middle">學習效率</h3>
         <p class="improve-text fz-7 lh-base">針對學員狀況調整內容與步調 學習精準最有效</p>
       </div>
     </li>
     <li class="improve-item-4 col-md-6 col-lg-3 h-263-px">
-      <div data-aos="zoom-out-down" class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
+      <div 
+      data-aos="zoom-out-down" 
+      class="d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start h-100 px-12">
         <span class="material-icons icon-size-32 fz-2 mb-4 text-primary">people</span>
         <h3 class="improve-title fz-4 fw-bold lh-base pb-4 mb-8 title-border-left-middle">一對一指導</h3>
         <p class="improve-text fz-7 lh-base">針對目的進行客製化課程安排 快速的學以致用</p>
@@ -282,10 +317,12 @@ current: index
     <h2 class="fz-3 fw-bold lh-lg-40 pb-4 mb-12 title-border-middle">文章分享</h2>
     <ul class="row">
       <li class="col-lg-4 mb-6 mb-lg-0">
-        <div data-aos="fade-up-right"
+        <div 
+        data-aos="fade-down-right"
         data-aos-easing="ease-in-back"
         data-aos-duration="1000"
-        data-aos-offset="0" class="card text-start border-0 p-8 bg-asphalt">
+        data-aos-offset="0"
+        class="card text-start border-0 p-8 bg-asphalt">
           <div class="squareRounded squareRounded-topLeft position-absolute top-0 left-0 translate-middle"></div>
           <div class="squareRounded squareRounded-topRight position-absolute top-0 left-100 translate-middle"></div>
           <div class="squareRounded squareRounded-bottomLeft position-absolute top-100 left-0 translate-middle"></div>
@@ -299,10 +336,12 @@ current: index
         </div>
       </li>
       <li class="col-lg-4 mb-6 mb-lg-0">
-        <div data-aos="fade-up-right"
+        <div 
+        data-aos="fade-up"
         data-aos-easing="ease-in-back"
         data-aos-duration="1000"
-        data-aos-offset="0" class="card text-start border-0 p-8 bg-asphalt">
+        data-aos-offset="0" 
+        class="card text-start border-0 p-8 bg-asphalt">
           <div class="squareRounded squareRounded-topLeft position-absolute top-0 left-0 translate-middle"></div>
           <div class="squareRounded squareRounded-topRight position-absolute top-0 left-100 translate-middle"></div>
           <div class="squareRounded squareRounded-bottomLeft position-absolute top-100 left-0 translate-middle"></div>
@@ -316,10 +355,12 @@ current: index
         </div>
       </li> 
       <li class="col-lg-4">
-        <div data-aos="fade-up-right"
+        <div 
+        data-aos="fade-down-left"
         data-aos-easing="ease-in-back"
         data-aos-duration="1000"
-        data-aos-offset="0" class="card text-start border-0 p-8 bg-asphalt">
+        data-aos-offset="0" 
+        class="card text-start border-0 p-8 bg-asphalt">
           <div class="squareRounded squareRounded-topLeft position-absolute top-0 left-0 translate-middle"></div>
           <div class="squareRounded squareRounded-topRight position-absolute top-0 left-100 translate-middle"></div>
           <div class="squareRounded squareRounded-bottomLeft position-absolute top-100 left-0 translate-middle"></div>
@@ -440,8 +481,10 @@ current: index
   <div class="container">
     <div class="row">
       <div class="col-lg-10 mx-auto">
-        <div data-aos="fade-up"
-        data-aos-anchor-placement="center-bottom" class="border-0 py-10 px-6 p-lg-8 bg-mine-shaft rounded-6 d-flex flex-column flex-md-row justify-content-between align-items-center position-relative">
+        <div 
+        data-aos="fade-up"
+        data-aos-anchor-placement="center-bottom" 
+        class="border-0 py-10 px-6 p-lg-8 bg-mine-shaft rounded-6 d-flex flex-column flex-md-row justify-content-between align-items-center position-relative">
           <div class="d-flex flex-column flex-md-row">
             <span class="material-icons book-icon mr-md-3 mr-lg-12 fz-80-px mx-auto mb-4 mb-md-0">menu_book</span>
             <div class="text-center text-md-start">
