--- a/app/pay-credit.html
+++ b/app/pay-credit.html
@@ -35,16 +35,16 @@ current: pay-credit
 
           <ul class="row text-silver text-start mb-4 mb-lg-6">
             <li>
-              <label for="myCreditAcc">信用卡帳號</label><br>
-              <input type="text" name="inputCreditAcc" class="py-2 pl-4 mt-2 mt-lg-1 mb-4 mb-lg-6 bg-asphalt border border-light rounded-1 w-100" id="myCreditAcc" placeholder="Xxxx-xxxx-xxxx-xxxx">
+              <label for="myCreditAcc" class="form-label">信用卡帳號</label><br>
+              <input type="text" name="inputCreditAcc" class="form-control py-2 pl-4 mt-2 mt-lg-1 mb-4 mb-lg-6 bg-asphalt border border-light rounded-1 w-100" id="myCreditAcc" placeholder="Xxxx-xxxx-xxxx-xxxx">
             </li>
             <li>
-              <label for="mySecureNo">安全碼</label><br>
-              <input type="password" name="inputSecureNo" class="py-2 pl-4 mt-2 mt-lg-1 mb-4 mb-lg-6 bg-asphalt border border-light rounded-1 w-100" id="mySecureNo" placeholder="***">
+              <label for="mySecureNo" class="form-label">安全碼</label><br>
+              <input type="password" name="inputSecureNo" class="form-control py-2 pl-4 mt-2 mt-lg-1 mb-4 mb-lg-6 bg-asphalt border border-light rounded-1 w-100" id="mySecureNo" placeholder="***">
             </li>
             <li>
-              <label for="myValidDate">有效日期</label><br>
-              <input type="email" name="inputValidDate" class="py-2 pl-4 mt-2 mt-lg-1 bg-asphalt border border-light rounded-1 w-100" id="myValidDate" placeholder="(MM-YY)">
+              <label for="myValidDate" class="form-label">有效日期</label><br>
+              <input type="email" name="inputValidDate" class="form-control py-2 pl-4 mt-2 mt-lg-1 bg-asphalt border border-light rounded-1 w-100" id="myValidDate" placeholder="(MM-YY)">
             </li>
           </ul>
 
