修正 助教提議部分

--- a/app/pay-register.html
+++ b/app/pay-register.html
@@ -102,7 +102,7 @@ current: pay-register
           </ul>
           <div class="d-flex flex-column flex-lg-row justify-content-lg-between align-items-lg-end">
             <span class="fz-7 lh-21 font-azeret mb-6 mb-lg-0">NT$1600</span>
-            <a href="./pay-credit.html" class="btn text-light bg-gradient fz-7 d-block rounded-2 border-0 py-2 px-4 px-lg-12">前往結賬</a>
+            <a href="./pay-credit.html" type="submit" class="btn text-light bg-gradient fz-7 d-block rounded-2 border-0 py-2 px-4 px-lg-12">前往結賬</a>
           </div>
         </div>
       </div>
