--- a/app/course.html
+++ b/app/course.html
@@ -10,7 +10,8 @@ current: course
 
     <div class="swiper-course-restrict">
       <div class="swiper courseSwiper">
-        <div class="swiper-wrapper">
+        <!-- 「所有課程」的 list ，可以加入 overflow: auto; 的語法，因為在縮小後會造成部分內容被遮蓋，使用此語法能透過滾輪的方式讓內容完整呈現。 -->
+        <div class="swiper-wrapper overflow-auto">
           <div class="swiper-slide">
             <button type="button" class="course-item active fz-8 fw-normal">所有課程</button>
           </div>
@@ -34,11 +35,12 @@ current: course
       </div>
     </div>
 
-    <div class="row">
+    <!-- 使用 card 的元件製作 -->
+    <ul class="row">
 
-      <div class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec rounded-6 mb-6 mb-lg-8">
-        <div class="d-flex flex-column flex-lg-row justify-content-between animate__animated course-animate">
-          <div class="d-lg-flex course-main">
+      <li class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec rounded-6 mb-6 mb-lg-8">
+        <div class="card d-flex flex-column flex-lg-row justify-content-between animate__animated course-animate">
+          <div class="card-body d-lg-flex course-main">
             <div class="course-header mb-6 mb-lg-0 mr-lg-12">
               <img src="./assets/images/teacher01.jpg" alt="avatar" class="avatar-size rounded-circle mb-2 mb-lg-0 mx-auto mx-lg-0 ">
               <p class="text-center">Belinda</p>
@@ -58,11 +60,11 @@ current: course
             </div>
           </div>
         </div>
-      </div>
+      </li>
 
-      <div class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec rounded-6 mb-6 mb-lg-8">
-        <div class="d-flex flex-column flex-lg-row justify-content-between animate__animated course-animate">
-          <div class="d-lg-flex course-main">
+      <li class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec rounded-6 mb-6 mb-lg-8">
+        <div class="card d-flex flex-column flex-lg-row justify-content-between animate__animated course-animate">
+          <div class="card-body d-lg-flex course-main">
             <div class="course-header mb-6 mb-lg-0 mr-lg-12">
               <img src="./assets/images/teacher02.jpg" alt="avatar2" class="avatar-size rounded-circle mb-2 mb-lg-0 mx-auto mx-lg-auto ">
               <p class="text-center">Guava</p>
@@ -82,11 +84,11 @@ current: course
             </div>
           </div>
         </div>
-      </div>
+      </li>
 
-      <div class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec rounded-6 mb-6 mb-lg-8">
-        <div class="d-flex flex-column flex-lg-row justify-content-between animate__animated course-animate">
-          <div class="d-lg-flex course-main">
+      <li class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec rounded-6 mb-6 mb-lg-8">
+        <div class="card d-flex flex-column flex-lg-row justify-content-between animate__animated course-animate">
+          <div class="card-body d-lg-flex course-main">
             <div class="course-header mb-6 mb-lg-0 mr-lg-12">
               <img src="./assets/images/teacher03.jpg" alt="avatar3" class="avatar-size rounded-circle mb-2 mb-lg-0 mx-auto mx-lg-auto ">
               <p class="text-center">Joe</p>
@@ -106,11 +108,11 @@ current: course
             </div>
           </div>
         </div>
-      </div>
+      </li>
 
-      <div class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec rounded-6 mb-6 mb-lg-8">
-        <div class="d-flex flex-column flex-lg-row justify-content-between animate__animated course-animate">
-          <div class="d-lg-flex course-main">
+      <li class="col-lg-10 mx-auto py-8 px-6 p-lg-12 bg-aztec rounded-6 mb-6 mb-lg-8">
+        <div class="card d-flex flex-column flex-lg-row justify-content-between animate__animated course-animate">
+          <div class="card-body d-lg-flex course-main">
             <div class="course-header mb-6 mb-lg-0 mr-lg-12">
               <img src="./assets/images/teacher04.jpg" alt="avatar4" class="avatar-size rounded-circle mb-2 mb-lg-0 mx-auto mx-lg-auto ">
               <p class="text-center">Lina</p>
@@ -130,7 +132,7 @@ current: course
             </div>
           </div>
         </div>
-      </div>
-    </div>
+      </li>
+    </ul>
   </div>
 </section>
