--- a/app/index.html
+++ b/app/index.html
@@ -9,15 +9,16 @@ current: index
   <div class="banner container h-100">
     <div class="row align-items-center justify-content-center h-100">
       <div class="col-md-10 col-lg-8 col-xl-6">
-        <div class="banner-body py-8 py-md-13 border border-light position-relative">
+        <!-- 「全台最豐富的程式家教」背景為全黑。 -->
+        <div class="bg-mine-shaft banner-body py-8 py-md-13 border border-light position-relative">
           <div class="square position-absolute top-0 left-0 translate-middle"></div>
           <div class="square position-absolute top-0 left-100 translate-middle"></div>
           <div class="square position-absolute top-100 left-0 translate-middle"></div>
           <div class="square position-absolute top-100 left-100 translate-middle"></div>
-          <h1 class="lh-base fw-bold fz-4 fz-md-1 mb-6 ">
+          <p class="lh-base fw-bold fz-4 fz-md-1 mb-6 ">
             <span class="text-gradient">全台最豐富的程式家教</span><br>
             在實踐中化理想為現實
-          </h1>
+          </p>
           <p class="fz-9 fz-md-7">全台最專業師資｜到府程式家教｜客製化課程</p>
         </div>
       </div>
@@ -42,7 +43,8 @@ current: index
         data-aos-duration="1000" 
         class="adv-card py-12 px-6 border-transparent rounded-3"> 
           <span class="material-icons icon-size-50 fz-1 text-gradient">code</span>
-          <section class="mt-6 d-flex flex-column flex-grow-1 h-120-px">
+          <!-- 「超過 100 種專業課程」在縮小的過程，會出現因自適應但因有設定高度所造成的跑版，這邊建議能使用 height: 100% (h-100) ，去做處理 -->
+          <section class="mt-6 d-flex flex-column flex-grow-1 h-100">
             <h4 class="mb-0 fz-7 lh-base fw-bold">超過 100 種專業課程</h4>
             <p class="mt-4 fz-7 lh-base">學習標準化的電腦形式語言<br>培養運算思維和邏輯素養</p>
           </section>
@@ -216,7 +218,7 @@ current: index
           data-aos-duration="2000" 
           class="card popular-item rounded-6 h-100  text-light bg-aztec border-blur200">
             <img src="./assets/images/teacher02.jpg" alt="avatar" class="card-img-top mt-6 avatar-size rounded-circle mb-2 mx-auto">
-            <p2022 class="text-center">Guava</p2022 Python 全攻略｜從入門到實務>
+            <p class="text-center">Guava</p>
             <div class="card-body px-8 px-md-6 pt-6 pb-8">
               <h3 class="fz-6 lh-base">2022 Python 全攻略｜從入門到實務</h3>
               <div>
